src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Fraud</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Fraud Case - Not Converted</fullName>
        </values>
        <values>
            <fullName>Contract Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Court Proceedings</fullName>
        </values>
        <values>
            <fullName>Legal warning letter</fullName>
        </values>
        <values>
            <fullName>Postive Inspection</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Japan Fraud</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified In - company exists</fullName>
        </values>
        <values>
            <fullName>Qualified Out - company does not exist</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Japan Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified In - company exists</fullName>
        </values>
        <values>
            <fullName>Qualified Out - company does not exist</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified In</fullName>
        </values>
        <values>
            <fullName>Qualified Out</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agency_Direct_Inqury_form_Inbound_c__c</fullName>
        <label>Agency / Direct / Inqury form (Inbound c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LE</fullName>
                </value>
                <value>
                    <fullName>ROAMLER</fullName>
                </value>
                <value>
                    <fullName>UGW</fullName>
                </value>
                <value>
                    <fullName>KRAUSS</fullName>
                </value>
                <value>
                    <fullName>Tel 4 (LE)</fullName>
                </value>
                <value>
                    <fullName>DAZN</fullName>
                </value>
                <value>
                    <fullName>Mixi</fullName>
                </value>
                <value>
                    <fullName>Reself(Clich)</fullName>
                </value>
                <value>
                    <fullName>UKAI</fullName>
                </value>
                <value>
                    <fullName>TCN</fullName>
                </value>
                <value>
                    <fullName>PAC</fullName>
                </value>
                <value>
                    <fullName>JCOM</fullName>
                </value>
                <value>
                    <fullName>WOWOW+</fullName>
                </value>
                <value>
                    <fullName>Starcat</fullName>
                </value>
                <value>
                    <fullName>KIRIN</fullName>
                </value>
                <value>
                    <fullName>ARUJI</fullName>
                </value>
                <value>
                    <fullName>Saga Ad agency</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                    <isActive>false</isActive>
                    <label>Direct</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UGW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Away_Team__c</fullName>
        <label>Away Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_name__c</fullName>
        <label>Trading/Brand name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CW_Conversion__c</fullName>
        <formula>FLOOR( ((ConvertedDate) - DATE(YEAR((ConvertedDate) - WEEKDAY((ConvertedDate)-1)+4),1,3)+ WEEKDAY(DATE(YEAR((ConvertedDate) - WEEKDAY((ConvertedDate)-1)+4),1,3))+5)/7 )</formula>
        <label>CW Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CW_Inspection__c</fullName>
        <formula>FLOOR( ((Inspection_Date__c) - DATE(YEAR((Inspection_Date__c) - WEEKDAY((Inspection_Date__c)-1)+4),1,3)+ WEEKDAY(DATE(YEAR((Inspection_Date__c) - WEEKDAY((Inspection_Date__c)-1)+4),1,3))+5)/7 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CW_Warning_Send_Out_2__c</fullName>
        <formula>FLOOR( ((Send_out_date_warning_2__c) - DATE(YEAR((Send_out_date_warning_2__c) - WEEKDAY((Send_out_date_warning_2__c)-1)+4),1,3)+ WEEKDAY(DATE(YEAR((Send_out_date_warning_2__c) - WEEKDAY((Send_out_date_warning_2__c)-1)+4),1,3))+5)/7 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW Warning Send Out 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CW_Warning_Send_Out__c</fullName>
        <formula>FLOOR( ((Send_out_date_warning__c) - DATE(YEAR((Send_out_date_warning__c) - WEEKDAY((Send_out_date_warning__c)-1)+4),1,3)+ WEEKDAY(DATE(YEAR((Send_out_date_warning__c) - WEEKDAY((Send_out_date_warning__c)-1)+4),1,3))+5)/7 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW Warning Send Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundesliga</fullName>
                </value>
                <value>
                    <fullName>Champions League</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Closed_By__c</fullName>
        <label>Contract Closed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAZN</fullName>
                </value>
                <value>
                    <fullName>Kraus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Closed__c</fullName>
        <label>Contract Closed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>this valueset contains ISO 3166-1 alpha-2 codes and country names. An alpha-2 code is an two-letter country code defined in ISO 3166-1, part of the ISO 3166 standard</description>
        <label>Country*</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Name_By_Alpha_2_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAZN_Code__c</fullName>
        <label>DAZN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage_Claim__c</fullName>
        <label>Damage Claim</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date_warning_1__c</fullName>
        <label>Due Date warning 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_warning_2__c</fullName>
        <label>Due Date warning 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_jp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>D4B contracted venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>End_of_Inspection__c</fullName>
        <label>End of Inspection</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>First_Warning_Sent__c</fullName>
        <formula>NOT((ISNULL(Send_out_date_warning__c) ||  ISBLANK(Send_out_date_warning__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Warning Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud_Lead__c</fullName>
        <formula>RecordType.DeveloperName == &apos;Fraud&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fraud Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handover_to_lawyer__c</fullName>
        <label>Handover to lawyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Team__c</fullName>
        <label>Home Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_rate__c</fullName>
        <label>Hotel rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Luxury hotel ¥ 500</fullName>
                </value>
                <value>
                    <fullName>City hotel ¥ 400</fullName>
                </value>
                <value>
                    <fullName>Business hotel ¥ 300</fullName>
                </value>
                <value>
                    <fullName>Ressure hotel ¥ 200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_18_digits__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID 18 digits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_created_Date__c</fullName>
        <label>ID created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Chain__c</fullName>
        <label>Individual/Chain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chain</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>チェーン</fullName>
                    <isActive>false</isActive>
                    <label>チェーン</label>
                </value>
                <value>
                    <fullName>個人店</fullName>
                    <isActive>false</isActive>
                    <label>個人店</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Date_Check__c</fullName>
        <label>Inspection Date Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>Not</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internet_speed__c</fullName>
        <label>Internet speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_contact_date__c</fullName>
        <label>Latest contact date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <externalId>true</externalId>
        <label>Lead Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Legacy_offering__c</fullName>
        <label>Legacy offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BuLi</fullName>
                </value>
                <value>
                    <fullName>non BuLi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_offi__c</fullName>
        <label>Main office / Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main office</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Day__c</fullName>
        <label>Match Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mixi_Subagency_customer_ID__c</fullName>
        <label>Mixi Subagency customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mixi_customer_ID__c</fullName>
        <label>Mixi customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_by__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_users__c</fullName>
        <label>Monthly users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_guests__c</fullName>
        <label>Number of guests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-6</fullName>
                </value>
                <value>
                    <fullName>6-10</fullName>
                </value>
                <value>
                    <fullName>More than 10</fullName>
                </value>
                <value>
                    <fullName>1-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_screens__c</fullName>
        <label>Number of screens</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_seats__c</fullName>
        <label>Number of seats</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_venues__c</fullName>
        <label>Number of venues</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Inspection__c</fullName>
        <label>Open Inspection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_level__c</fullName>
        <label>Organization level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main office</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPD_Identity__c</fullName>
        <label>PPD Identity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Damage_Claim__c</fullName>
        <label>Paid Damage Claim</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential__c</fullName>
        <label>Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WON-成約</fullName>
                </value>
                <value>
                    <fullName>S(95%)- 契約書締結作業中</fullName>
                </value>
                <value>
                    <fullName>A(75%)-金額交渉が終わり、利用開始日を確定中</fullName>
                </value>
                <value>
                    <fullName>Disccount level 3- 値引き提示3段階提示</fullName>
                </value>
                <value>
                    <fullName>Disccount level 2- 値引き提示2段階提示</fullName>
                </value>
                <value>
                    <fullName>Disccount level 1- 値引き提示1段階提示</fullName>
                </value>
                <value>
                    <fullName>B(50%)-料金など条件を理解し、前向きに検討</fullName>
                </value>
                <value>
                    <fullName>C(25%)-電話やMTGにて説明済み</fullName>
                </value>
                <value>
                    <fullName>Fail-失注</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_number_of_rooms_Hotel__c</fullName>
        <label>Potential number of rooms (Hotel)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_number_of_venues__c</fullName>
        <label>Potential number of venues</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_start_date__c</fullName>
        <label>Potential start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_out_reason__c</fullName>
        <description>Field required when Lead Status = Qualified Out or Qualified In</description>
        <inlineHelpText>Field required when Lead Status = Qualified Out or Qualified in</inlineHelpText>
        <label>Qualified In/Out reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self-registered (DAZN)</fullName>
                </value>
                <value>
                    <fullName>Blacklist</fullName>
                </value>
                <value>
                    <fullName>Not reached</fullName>
                </value>
                <value>
                    <fullName>Not interested - price</fullName>
                </value>
                <value>
                    <fullName>Not interested - content</fullName>
                </value>
                <value>
                    <fullName>Not interested - technical issues</fullName>
                </value>
                <value>
                    <fullName>Not interested - customer base not relevant</fullName>
                </value>
                <value>
                    <fullName>Not interested - location (concept etc.)</fullName>
                </value>
                <value>
                    <fullName>Not interested – with competition</fullName>
                </value>
                <value>
                    <fullName>Business closed (or will close soon)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lead directed to e-commerce</fullName>
                </value>
                <value>
                    <fullName>Lead taken over by sales</fullName>
                </value>
                <value>
                    <fullName>Not now - maybe later</fullName>
                </value>
                <value>
                    <fullName>Signed C&amp;D + No damage claim</fullName>
                </value>
                <value>
                    <fullName>Signed C&amp;D + Damage claim paid</fullName>
                </value>
                <value>
                    <fullName>Contract Signed before inspection</fullName>
                </value>
                <value>
                    <fullName>Converted by Agency</fullName>
                </value>
                <value>
                    <fullName>No C&amp;D + no damage claim</fullName>
                </value>
                <value>
                    <fullName>Content not relevant</fullName>
                    <isActive>false</isActive>
                    <label>Content not relevant</label>
                </value>
                <value>
                    <fullName>No TVs in venue</fullName>
                    <isActive>false</isActive>
                    <label>No TVs in venue</label>
                </value>
                <value>
                    <fullName>Too expensive</fullName>
                    <isActive>false</isActive>
                    <label>Too expensive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_comment__c</fullName>
        <label>Reason comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_status__c</fullName>
        <label>Sales status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>Apointment</fullName>
                    <isActive>false</isActive>
                    <label>Apointment</label>
                </value>
                <value>
                    <fullName>etc</fullName>
                    <isActive>false</isActive>
                    <label>etc</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Warning_Sent__c</fullName>
        <formula>NOT((ISNULL(Send_out_date_warning_2__c) || ISBLANK(Send_out_date_warning_2__c)))</formula>
        <label>Second Warning Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_event__c</fullName>
        <label>Send event</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>\Nondelivery 9/27</fullName>
                </value>
                <value>
                    <fullName>Nondelivery 10/18</fullName>
                </value>
                <value>
                    <fullName>Nondelivery 9/22</fullName>
                </value>
                <value>
                    <fullName>Rakusul 10/18</fullName>
                </value>
                <value>
                    <fullName>Rakusul 9/22</fullName>
                </value>
                <value>
                    <fullName>Rakusul 9/27</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_out_date_warning_2__c</fullName>
        <label>Send out date warning 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_out_date_warning__c</fullName>
        <label>Send out date warning 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Side_Letter__c</fullName>
        <label>Side Letter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_C_D__c</fullName>
        <label>Signed C&amp;D</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_of_Inspection__c</fullName>
        <label>Start of Inspection</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Tel_1_BarFinder__c</fullName>
        <label>Tel 1 (BarFinder)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tel_2_GoogleUS__c</fullName>
        <label>Tel 2 (GoogleUS)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tel_2_Google_US__c</fullName>
        <label>Tel 2 (Google US)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tel_3_GoogleDE__c</fullName>
        <label>Tel 3 (GoogleDE)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tel_3_Google_DE__c</fullName>
        <label>Tel 3 (Google DE)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tel_4_LE__c</fullName>
        <label>Tel 4 (LE)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tel_5_LE__c</fullName>
        <label>Tel 5 (LE)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <label>Third Party</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_number_of_devices__c</fullName>
        <label>Total number of devices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_monitors__c</fullName>
        <label>Total number of monitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_rooms__c</fullName>
        <label>Total number of rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_gastronomy__c</fullName>
        <label>Type of gastronomy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>